2001-05-17  James LewisMoss  <jimdres@mindspring.com>

	* src/engine/Makefile.am (libgncengine_la_SOURCES): remove
	io-gncxml-w.c.

2001-05-17  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/engine.texinfo: update docs

	* src/engine/Account.c (xaccAccountRecomputeBalance): include
	frozen splits in reconciled balance. Fix variable names.

	* accounts/C/*: tweak detailed descriptions

	* doc/sgml/C/xacc-reports.sgml: fix warnings

	* doc/sgml/C/xacc-net-worth-barchart.sgml: fix warnings

	* doc/sgml/C/xacc-gnucash-web-browser.sgml: fix warnings

	* doc/sgml/C/xacc-gnome-mdi.sgml: fix warnings

	* doc/sgml/C/xacc-common-report-options.sgml: fix warnings

	* doc/sgml/C/Makefile.am: add new file to Makefile.am

	* src/doc/design/gnucash-design.texinfo: update docs

	* src/doc/design/engine.texinfo: update docs

	* src/engine/Account.c: same as below

	* src/engine/Account.h: use GNCAccountType instead of 'int'

2001-05-17  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-gnucash-web-browser.sgml: New file.

	* doc/sgml/C/Makefile.am: add new file.

	* doc/sgml/C/gnucash.sgml, xacc-gnome-mdi.sgml, 
	xacc-asset-liability-piecharts.sgml: more updated/new content.

	* ChangeLog: fix wrong path in (my) previous changelog
	entry.

2001-05-16  Dave Peticolas  <dave@krondo.com>

	* src/doc/design/gnucash-design.texinfo: update docs

	* src/doc/design/engine.texinfo: update docs

	* src/engine/Account.c (xaccCloneAccountSimple): remove
	redundant initialization
	(xaccAccountGetSlots): handle NULL

	* src/engine/Account.h: fix docs

	* src/engine/AccountP.h: fix spelling errors in comments

2001-05-16  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/html-utilities.scm ((gnc:html-make-empty-data-warning)): 
	update message.

	* doc/sgml/C/{gnucash.sgml, xacc-account-summary.sgml, 
	xacc-asset-liability-barcharts.sgml, xacc-reports.sgml}: more new
	material.

	* src/scm/xacc-stock-price-report.sgml: new file.
